info button fixed. fix z-index stack

--- a/css/site.css
+++ b/css/site.css
@@ -773,7 +773,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 900;
+  z-index: 500;
   text-align: center;
 }
 #logo {
@@ -792,7 +792,7 @@ img {
   width: 100%;
   height: 100vh;
   background-color: #000;
-  z-index: 800;
+  z-index: 400;
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
   pointer-events: none;
@@ -823,6 +823,7 @@ img {
   width: 100vw;
   height: 100vh;
   will-change: contents;
+  z-index: 100;
 }
 .image-holder {
   height: 100%;
@@ -833,8 +834,9 @@ img {
   max-height: 100%;
 }
 #info-button {
-  position: absolute;
+  position: fixed;
   cursor: pointer;
+  z-index: 200;
 }
 #footer {
   position: absolute;
@@ -842,6 +844,7 @@ img {
   width: 100%;
   background-color: #000;
   color: #fff;
+  z-index: 300;
 }
 .think-of-item {
   position: absolute;
